2006-11-25 Nicolas Roard <nicolas@roard.com>

	* GSDrawFunctions.h:
	* GSDrawFunctions.m:
	* CamaelonDrawFunctions.h:
	* CamaelonDrawFunctions.m:
	* NSTableView.m:
	Patched to compile (and work) with current gnustep svn. 
	Based on a patch from Matt Rice <ratmice@gmail.com>
	 
2006-09-12 Quentin Mathe <qmathe@club-internet.fr>

	* NSBrowserCell.m (-highlightColorInView:) 
	(-drawInteriorWithFrame:inView:): Added a new method 
	-highlightColorInView: in the 'theme' category. This overrides the 
	method currently used by the class itself and allows to remove a 
	dubious line in the other method. Inspired by an Andreas Hoschler 
	patch.

2006-09-12 Quentin Mathe <qmathe@club-internet.fr>

	* NSMenuItemCell.m: Applied a patch submitted by Andreas Hoschler that
	corrects a crash on Solaris. Improved the patch a bit to log the error
	since we probably need a better image handling to eliminate such
	potential issue. 
	
2006-05-19 Nicolas Roard <nicolas@roard.com>

	* CLImage.m: modified the path to properly access the images used by 
	the Windows. Thanks for Chris Vetter perseverance in 
	re-re-re-submitting a patch for it ;-)

2006-03-19 Nicolas Roard <nicolas@roard.com>

	* committed a patch in NSPopupMenu by matt rice
	* removed GSWindowDecorationView from the makefile

2006-01-18 Quentin Mathe <qmathe@club-internet.fr>

    * GNUmakefile: Removed superfluous license notice.

2006-01-18 Quentin Mathe <qmathe@club-internet.fr>

    * COPYING: Relicensed current Camaelon code under LGPL (was previously
    GPLed).

2005-10-28 Nicolas Roard <nicolas@roard.com>

	Modified GSDrawFunctions so that all the methods are now instance methods;
	and modified the classes to call them properly (using a THEME macro
	defined in GSDrawFunctions.h).
	GSDrawFunctions holds an instance of a "theme" class (by default, an
	instance of GSDrawFunctions itself) accessible via GSDrawFunctions +theme.
	Themes can be swapped by using the +setTheme: method.